--- a/04. PROJECT for MANAGEMENT AND ANALYSIS OF PHYSICS DATASET/MiniBatchKmeans_group19.ipynb
+++ b/04. PROJECT for MANAGEMENT AND ANALYSIS OF PHYSICS DATASET/MiniBatchKmeans_group19.ipynb
@@ -195,7 +195,7 @@
     "\n",
     "    hosts = [\"10.67.22.221\", \"10.67.22.221\", \"10.67.22.193\", \"10.67.22.244\"]  # scheduler, workers \n",
     "\n",
-    "    connect_options = [{\"known_hosts\": None, \"username\": \"guercio\", \"password\": \"Qc0Ql2ev#\"}] * (nworkers + 1)\n",
+    "    connect_options = [{\"known_hosts\": None, \"username\": \"*****\", \"password\": \"*******\"}] * (nworkers + 1)\n",
     "\n",
     "    dask.config.set({\"distributed.comm.retry.count\": 10})\n",
     "    dask.config.set({\"distributed.comm.timeouts.connect\": 600})\n",
